<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nguyen.overflowmenu.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_overFlow"
        android:icon="@drawable/ic_action_name"
        android:orderInCategory="100"
        android:title="@string/over_flow"
        app:showAsAction="always" >

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_red"
                    app:showAsAction="never"
                    android:orderInCategory="1"
                    android:title="@string/red" />
                <item
                    android:id="@+id/menu_blue"
                    app:showAsAction="never"
                    android:orderInCategory="2"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/menu_green"
                    app:showAsAction="never"
                    android:orderInCategory="3"
                    android:title="@string/green" />
                <item
                    android:id="@+id/menu_gray"
                    app:showAsAction="never"
                    android:orderInCategory="4"
                    android:title="@string/gray" />
            </group>
        </menu>
    </item>
</menu>
