<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/name"
        android:key="username"
        android:summary="Please provide your username" />

    <CheckBoxPreference
        android:title="@string/application_updates"
        android:defaultValue="false"
        android:key="applicationUpdates"
        android:summary="This option if selected will allow the application to check for the latest version." />

    <ListPreference
        android:title="@string/download_details"
        android:key="downloadType"
        android:defaultValue="1"
        android:entries="@array/ListArray"
        android:entryValues="@array/ListValues"
        android:summary="Select the kind of data that you would like to download" />

</PreferenceScreen>